--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#variables de entorno
+.env
+.env.desarr
+.env.prod
