--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/mapped-types": "^0.3.0",
     "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/swagger": "^4.7.16",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "joi": "^17.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
@@ -39,7 +43,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.6.3",    
+    "jest": "^26.6.3",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-loader": "^8.0.17",
